<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JoinActivity">

    <EditText
        android:id="@+id/Edit_text_id"
        android:layout_width="350dip"
        android:layout_height="66dip"
        android:hint="@string/join_text_id"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">
    </EditText>

    <EditText
        android:id="@+id/Edit_text_pw"
        android:layout_width="350dip"
        android:layout_height="66dip"
        android:hint="@string/join_text_pw"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    </EditText>

    <EditText
        android:id="@+id/Edit_text_name"
        android:layout_width="350dip"
        android:layout_height="66dip"
        android:hint="@string/join_text_name"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    </EditText>

    <EditText
        android:id="@+id/Edit_text_phone"
        android:layout_width="350dip"
        android:layout_height="66dip"
        android:hint="@string/join_text_phone"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    </EditText>

    <EditText
        android:id="@+id/Edit_text_email"
        android:layout_width="350dip"
        android:layout_height="66dip"
        android:hint="@string/join_text_email"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_join_ok"
            android:layout_width="150dp"
            android:layout_height="66dip"
            android:text="@string/login_text_join"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_weight="1">
        </Button>

        <Button
            android:id="@+id/btn_join_cancel"
            android:layout_width="150dp"
            android:layout_height="66dip"
            android:text="@string/join_text_cancel"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1">
        </Button>
    </LinearLayout>


</LinearLayout>